# ML-exercises

./: CMakeLists.txt  cpp_csv_handler.cpp  cpp_csv_handler.h  main.cpp
chapter1/: README.me  local_search.cpp  output  problem.cpp
chapter1/headers/: problem.h
chapter2/: .gitignore  Assignments.txt  assignment2.cpp  assignment2_data.txt  assignment3.cpp  assignment3_data.txt  output  readme.md
chapter3/: 10%_noise.csv  15%_noise.csv  20%_noise.csv  25%_noise.csv  5%_noise.csv  Classifier.py  assignment1.py  assignment3.py  domain_synthesizer.py  plotter.py  questions.txt  readme.md  training_set.csv
chapter3/datasets/: 0%_noise.csv  10%_noise.csv  15%_noise.csv  25%_noise.csv  5%_noise.csv
chapter4/: LinearClassifier.h  PolynomialClassifier.cpp  PolynomialClassifier.h  data.csv  example.h  labeled.csv  main.cpp  output  readme.md  unlabeled.csv
chapter4/assignment1/: labeled.csv  main.cpp  output
data-manager/: CMakeLists.txt  DataManager.cpp  DataManager.h  DataManager.hpp
fuzzy/: FCM.py  report.odt
headers/: local_search.h
libfile/: CMakeLists.txt  libfile.cpp
